lab3/gen/JavaCodeParser.js
// Generated from /Users/mishenkoil/WebstormProjects/test-antlr/JavaCode.g4 by ANTLR 4.10.1
// jshint ignore: start
import antlr4 from 'antlr4';
import JavaCodeListener from './JavaCodeListener.js';
import JavaCodeVisitor from './JavaCodeVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class JavaCodeParser extends antlr4.Parser {

    static grammarFileName = "JavaCode.g4";
    static literalNames = [ null, "'public'", "'private'", "'protected'", 
                            "'static'", "'final'", "'int'", "'double'", 
                            "'float'", "'char'", "'String'", "'boolean'", 
                            "'void'", "'('", "')'", "','", "'{\\n'", "'}'", 
                            "'='", "'+'", "'-'", "'/'", "'*'", "' '", "'return'", 
                            null, "';\\n'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, "SPACE", 
                             "RET", "VAR", "SEMICOLON", "NUM", "TAB" ];
    static ruleNames = [ "start", "declaration", "props", "modif", "stat", 
                         "fin", "type", "func", "args", "arg", "nextarg", 
                         "body", "source", "returnfunc", "statement", "dec", 
                         "vars", "nextvar", "eq", "expr", "oper", "operand", 
                         "op", "sign" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = JavaCodeParser.ruleNames;
        this.literalNames = JavaCodeParser.literalNames;
        this.symbolicNames = JavaCodeParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	start() {
	    let localctx = new StartContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, JavaCodeParser.RULE_start);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 48;
	        this.declaration();
	        this.state = 49;
	        this.body();
	        this.state = 50;
	        this.match(JavaCodeParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	declaration() {
	    let localctx = new DeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, JavaCodeParser.RULE_declaration);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 52;
	        this.props();
	        this.state = 53;
	        this.match(JavaCodeParser.SPACE);
	        this.state = 54;
	        this.func();
	        this.state = 55;
	        this.match(JavaCodeParser.SPACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	props() {
	    let localctx = new PropsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, JavaCodeParser.RULE_props);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 59;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case JavaCodeParser.T__0:
	        case JavaCodeParser.T__1:
	        case JavaCodeParser.T__2:
	            this.state = 57;
	            this.modif();
	            break;
	        case JavaCodeParser.T__3:
	        case JavaCodeParser.T__4:
	        case JavaCodeParser.T__5:
	        case JavaCodeParser.T__6:
	        case JavaCodeParser.T__7:
	        case JavaCodeParser.T__8:
	        case JavaCodeParser.T__9:
	        case JavaCodeParser.T__10:
	        case JavaCodeParser.T__11:
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 63;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case JavaCodeParser.T__3:
	            this.state = 61;
	            this.stat();
	            break;
	        case JavaCodeParser.T__4:
	        case JavaCodeParser.T__5:
	        case JavaCodeParser.T__6:
	        case JavaCodeParser.T__7:
	        case JavaCodeParser.T__8:
	        case JavaCodeParser.T__9:
	        case JavaCodeParser.T__10:
	        case JavaCodeParser.T__11:
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 67;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case JavaCodeParser.T__4:
	            this.state = 65;
	            this.fin();
	            break;
	        case JavaCodeParser.T__5:
	        case JavaCodeParser.T__6:
	        case JavaCodeParser.T__7:
	        case JavaCodeParser.T__8:
	        case JavaCodeParser.T__9:
	        case JavaCodeParser.T__10:
	        case JavaCodeParser.T__11:
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 69;
	        this.type();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	modif() {
	    let localctx = new ModifContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, JavaCodeParser.RULE_modif);
	    try {
	        this.state = 77;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case JavaCodeParser.T__0:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 71;
	            this.match(JavaCodeParser.T__0);
	            this.state = 72;
	            this.match(JavaCodeParser.SPACE);
	            break;
	        case JavaCodeParser.T__1:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 73;
	            this.match(JavaCodeParser.T__1);
	            this.state = 74;
	            this.match(JavaCodeParser.SPACE);
	            break;
	        case JavaCodeParser.T__2:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 75;
	            this.match(JavaCodeParser.T__2);
	            this.state = 76;
	            this.match(JavaCodeParser.SPACE);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stat() {
	    let localctx = new StatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, JavaCodeParser.RULE_stat);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 79;
	        this.match(JavaCodeParser.T__3);
	        this.state = 80;
	        this.match(JavaCodeParser.SPACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fin() {
	    let localctx = new FinContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, JavaCodeParser.RULE_fin);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 82;
	        this.match(JavaCodeParser.T__4);
	        this.state = 83;
	        this.match(JavaCodeParser.SPACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	type() {
	    let localctx = new TypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, JavaCodeParser.RULE_type);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 85;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << JavaCodeParser.T__5) | (1 << JavaCodeParser.T__6) | (1 << JavaCodeParser.T__7) | (1 << JavaCodeParser.T__8) | (1 << JavaCodeParser.T__9) | (1 << JavaCodeParser.T__10) | (1 << JavaCodeParser.T__11))) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	func() {
	    let localctx = new FuncContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, JavaCodeParser.RULE_func);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 87;
	        this.match(JavaCodeParser.VAR);
	        this.state = 88;
	        this.match(JavaCodeParser.T__12);
	        this.state = 91;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case JavaCodeParser.T__5:
	        case JavaCodeParser.T__6:
	        case JavaCodeParser.T__7:
	        case JavaCodeParser.T__8:
	        case JavaCodeParser.T__9:
	        case JavaCodeParser.T__10:
	        case JavaCodeParser.T__11:
	            this.state = 89;
	            this.args();
	            break;
	        case JavaCodeParser.T__13:
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 93;
	        this.match(JavaCodeParser.T__13);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	args() {
	    let localctx = new ArgsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, JavaCodeParser.RULE_args);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 95;
	        this.arg();
	        this.state = 98;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case JavaCodeParser.T__14:
	            this.state = 96;
	            this.nextarg();
	            break;
	        case JavaCodeParser.T__13:
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	arg() {
	    let localctx = new ArgContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, JavaCodeParser.RULE_arg);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 100;
	        this.type();
	        this.state = 101;
	        this.match(JavaCodeParser.SPACE);
	        this.state = 102;
	        this.match(JavaCodeParser.VAR);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nextarg() {
	    let localctx = new NextargContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, JavaCodeParser.RULE_nextarg);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 104;
	        this.match(JavaCodeParser.T__14);
	        this.state = 105;
	        this.match(JavaCodeParser.SPACE);
	        this.state = 106;
	        this.args();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	body() {
	    let localctx = new BodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, JavaCodeParser.RULE_body);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 108;
	        this.match(JavaCodeParser.T__15);
	        this.state = 113;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===JavaCodeParser.TAB) {
	            this.state = 109;
	            this.match(JavaCodeParser.TAB);
	            this.state = 110;
	            this.source();
	            this.state = 115;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 116;
	        this.match(JavaCodeParser.T__16);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	source() {
	    let localctx = new SourceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, JavaCodeParser.RULE_source);
	    try {
	        this.state = 120;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case JavaCodeParser.T__5:
	        case JavaCodeParser.T__6:
	        case JavaCodeParser.T__7:
	        case JavaCodeParser.T__8:
	        case JavaCodeParser.T__9:
	        case JavaCodeParser.T__10:
	        case JavaCodeParser.T__11:
	        case JavaCodeParser.VAR:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 118;
	            this.statement();
	            break;
	        case JavaCodeParser.RET:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 119;
	            this.returnfunc();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	returnfunc() {
	    let localctx = new ReturnfuncContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, JavaCodeParser.RULE_returnfunc);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this.match(JavaCodeParser.RET);
	        this.state = 125;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case JavaCodeParser.SPACE:
	            this.state = 123;
	            this.match(JavaCodeParser.SPACE);
	            break;
	        case JavaCodeParser.VAR:
	        case JavaCodeParser.SEMICOLON:
	        case JavaCodeParser.NUM:
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 130;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case JavaCodeParser.VAR:
	            this.state = 127;
	            this.match(JavaCodeParser.VAR);
	            break;
	        case JavaCodeParser.NUM:
	            this.state = 128;
	            this.match(JavaCodeParser.NUM);
	            break;
	        case JavaCodeParser.SEMICOLON:
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 132;
	        this.match(JavaCodeParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, JavaCodeParser.RULE_statement);
	    try {
	        this.state = 140;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case JavaCodeParser.T__5:
	        case JavaCodeParser.T__6:
	        case JavaCodeParser.T__7:
	        case JavaCodeParser.T__8:
	        case JavaCodeParser.T__9:
	        case JavaCodeParser.T__10:
	        case JavaCodeParser.T__11:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 134;
	            this.dec();
	            this.state = 135;
	            this.match(JavaCodeParser.SEMICOLON);
	            break;
	        case JavaCodeParser.VAR:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 137;
	            this.expr();
	            this.state = 138;
	            this.match(JavaCodeParser.SEMICOLON);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	dec() {
	    let localctx = new DecContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, JavaCodeParser.RULE_dec);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 142;
	        this.type();
	        this.state = 143;
	        this.match(JavaCodeParser.SPACE);
	        this.state = 144;
	        this.vars();
	        this.state = 148;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===JavaCodeParser.SPACE) {
	            this.state = 145;
	            this.eq();
	            this.state = 150;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	vars() {
	    let localctx = new VarsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, JavaCodeParser.RULE_vars);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 151;
	        this.match(JavaCodeParser.VAR);
	        this.state = 154;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case JavaCodeParser.T__14:
	            this.state = 152;
	            this.nextvar();
	            break;
	        case JavaCodeParser.SPACE:
	        case JavaCodeParser.SEMICOLON:
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nextvar() {
	    let localctx = new NextvarContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, JavaCodeParser.RULE_nextvar);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 156;
	        this.match(JavaCodeParser.T__14);
	        this.state = 157;
	        this.match(JavaCodeParser.SPACE);
	        this.state = 158;
	        this.vars();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	eq() {
	    let localctx = new EqContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, JavaCodeParser.RULE_eq);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 160;
	        this.match(JavaCodeParser.SPACE);
	        this.state = 161;
	        this.match(JavaCodeParser.T__17);
	        this.state = 162;
	        this.match(JavaCodeParser.SPACE);
	        this.state = 163;
	        this.oper();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expr() {
	    let localctx = new ExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, JavaCodeParser.RULE_expr);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 165;
	        this.match(JavaCodeParser.VAR);
	        this.state = 166;
	        this.eq();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	oper() {
	    let localctx = new OperContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, JavaCodeParser.RULE_oper);
	    try {
	        this.state = 170;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 168;
	            this.operand();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 169;
	            this.op();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	operand() {
	    let localctx = new OperandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, JavaCodeParser.RULE_operand);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 172;
	        _la = this._input.LA(1);
	        if(!(_la===JavaCodeParser.VAR || _la===JavaCodeParser.NUM)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	op() {
	    let localctx = new OpContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, JavaCodeParser.RULE_op);
	    try {
	        this.state = 181;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,14,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 174;
	            this.operand();
	            this.state = 175;
	            this.match(JavaCodeParser.SPACE);
	            this.state = 176;
	            this.sign();
	            this.state = 177;
	            this.match(JavaCodeParser.SPACE);
	            this.state = 178;
	            this.op();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 180;
	            this.operand();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sign() {
	    let localctx = new SignContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 46, JavaCodeParser.RULE_sign);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 183;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << JavaCodeParser.T__18) | (1 << JavaCodeParser.T__19) | (1 << JavaCodeParser.T__20) | (1 << JavaCodeParser.T__21))) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

JavaCodeParser.EOF = antlr4.Token.EOF;
JavaCodeParser.T__0 = 1;
JavaCodeParser.T__1 = 2;
JavaCodeParser.T__2 = 3;
JavaCodeParser.T__3 = 4;
JavaCodeParser.T__4 = 5;
JavaCodeParser.T__5 = 6;
JavaCodeParser.T__6 = 7;
JavaCodeParser.T__7 = 8;
JavaCodeParser.T__8 = 9;
JavaCodeParser.T__9 = 10;
JavaCodeParser.T__10 = 11;
JavaCodeParser.T__11 = 12;
JavaCodeParser.T__12 = 13;
JavaCodeParser.T__13 = 14;
JavaCodeParser.T__14 = 15;
JavaCodeParser.T__15 = 16;
JavaCodeParser.T__16 = 17;
JavaCodeParser.T__17 = 18;
JavaCodeParser.T__18 = 19;
JavaCodeParser.T__19 = 20;
JavaCodeParser.T__20 = 21;
JavaCodeParser.T__21 = 22;
JavaCodeParser.SPACE = 23;
JavaCodeParser.RET = 24;
JavaCodeParser.VAR = 25;
JavaCodeParser.SEMICOLON = 26;
JavaCodeParser.NUM = 27;
JavaCodeParser.TAB = 28;

JavaCodeParser.RULE_start = 0;
JavaCodeParser.RULE_declaration = 1;
JavaCodeParser.RULE_props = 2;
JavaCodeParser.RULE_modif = 3;
JavaCodeParser.RULE_stat = 4;
JavaCodeParser.RULE_fin = 5;
JavaCodeParser.RULE_type = 6;
JavaCodeParser.RULE_func = 7;
JavaCodeParser.RULE_args = 8;
JavaCodeParser.RULE_arg = 9;
JavaCodeParser.RULE_nextarg = 10;
JavaCodeParser.RULE_body = 11;
JavaCodeParser.RULE_source = 12;
JavaCodeParser.RULE_returnfunc = 13;
JavaCodeParser.RULE_statement = 14;
JavaCodeParser.RULE_dec = 15;
JavaCodeParser.RULE_vars = 16;
JavaCodeParser.RULE_nextvar = 17;
JavaCodeParser.RULE_eq = 18;
JavaCodeParser.RULE_expr = 19;
JavaCodeParser.RULE_oper = 20;
JavaCodeParser.RULE_operand = 21;
JavaCodeParser.RULE_op = 22;
JavaCodeParser.RULE_sign = 23;

class StartContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JavaCodeParser.RULE_start;
    }

	declaration() {
	    return this.getTypedRuleContext(DeclarationContext,0);
	};

	body() {
	    return this.getTypedRuleContext(BodyContext,0);
	};

	EOF() {
	    return this.getToken(JavaCodeParser.EOF, 0);
	};

	enterRule(listener) {
	    if(listener instanceof JavaCodeListener ) {
	        listener.enterStart(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JavaCodeListener ) {
	        listener.exitStart(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JavaCodeVisitor ) {
	        return visitor.visitStart(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class DeclarationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JavaCodeParser.RULE_declaration;
    }

	props() {
	    return this.getTypedRuleContext(PropsContext,0);
	};

	SPACE = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(JavaCodeParser.SPACE);
	    } else {
	        return this.getToken(JavaCodeParser.SPACE, i);
	    }
	};


	func() {
	    return this.getTypedRuleContext(FuncContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof JavaCodeListener ) {
	        listener.enterDeclaration(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JavaCodeListener ) {
	        listener.exitDeclaration(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JavaCodeVisitor ) {
	        return visitor.visitDeclaration(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class PropsContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JavaCodeParser.RULE_props;
    }

	type() {
	    return this.getTypedRuleContext(TypeContext,0);
	};

	modif() {
	    return this.getTypedRuleContext(ModifContext,0);
	};

	stat() {
	    return this.getTypedRuleContext(StatContext,0);
	};

	fin() {
	    return this.getTypedRuleContext(FinContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof JavaCodeListener ) {
	        listener.enterProps(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JavaCodeListener ) {
	        listener.exitProps(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JavaCodeVisitor ) {
	        return visitor.visitProps(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ModifContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JavaCodeParser.RULE_modif;
    }

	SPACE() {
	    return this.getToken(JavaCodeParser.SPACE, 0);
	};

	enterRule(listener) {
	    if(listener instanceof JavaCodeListener ) {
	        listener.enterModif(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JavaCodeListener ) {
	        listener.exitModif(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JavaCodeVisitor ) {
	        return visitor.visitModif(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class StatContext extends antlr4.ParserRuleContext {
